syntax = "proto3";

package com.w3engineers.unicef.telemesh;

message TeleMeshAnalytics{

}

message MessageCount {
    string userId = 1;
    int32 messageSetCount = 2;
    int64 lastMessageTime = 3;
}